# openhx

./: Cargo.toml  README.md  dist-workspace.toml  justfile
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lib.rs
crates/cli/src/commands/: list_presets.rs  mod.rs
crates/cli/src/commands/preset/: list.rs  select.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  error.rs  lib.rs  mock.rs  models.rs
crates/core/src/device/: catalog.rs  mod.rs  profile.rs
crates/core/src/usb/: client.rs  mod.rs  parser.rs  protocol.rs  select.rs
crates/gui/: Cargo.toml  i18n.toml
crates/gui/src/: app.rs  lib.rs  message.rs  state.rs  update.rs  view.rs  worker.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/openhx/: Cargo.toml
crates/openhx/src/: cli.rs  main.rs
crates/openhx/wix/: main.wxs
docs/: README.md
docs/protocol/: README.md  error-recovery.md  implementation-notes.md  packet-reference.md  session-handshake.md  transport.md  usb-device.md
docs/protocol/presets/: data-format.md  list.md  select.md
i18n/en/: openhx.ftl
i18n/pt-BR/: openhx.ftl
pkg/windows/: eula.rtf
