[package]
name = "openhx_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.dist]
dist = false

[features]
mock = []

[dependencies]
openhx_i18n = { workspace = true }
rusb = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
cargo-husky = { workspace = true }
