[package]
name = "openhx"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true

[package.metadata.wix]
upgrade-guid = "69394F47-512C-45F4-BD84-E941F6D5D642"
path-guid = "99A8F819-5216-4D3D-BFE9-FC446E2C4BDA"
license = "../../pkg/windows/license.txt"
eula = "../../pkg/windows/eula.rtf"

[features]
mock = ["openhx_gui/mock", "openhx_cli/mock"]

[[bin]]
name = "openhx"
path = "src/main.rs"

[[bin]]
name = "openhx-cli"
path = "src/cli.rs"

[dependencies]
openhx_gui = { path = "../gui" }
openhx_cli = { path = "../cli" }
openhx_i18n = { path = "../i18n" }
